Fix race condition

Exposed when checking on T44871